--- a/app/index.html
+++ b/app/index.html
@@ -215,14 +215,26 @@
             </div>
 
             <div class="youtube">
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <h3>Наш Youtube канал</h3>
+                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <h3>Наш телеграм канал</h3>
              </div>
 
              <div class="youtube">
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <h3>Наш Youtube канал</h3>
+                <a href=""><i class="fa-solid fa-envelope"></i></a>
+                <h3>Наша почта</h3>
              </div>
+        </div>
+
+        <div class="footer_about-us">
+            <div class="footer_first-block">
+                <h2>PixelQuest</h2>
+                <p>Лучший игрвовой портал в своем роде. <br>Здесь можно найти все что вам нужно, присоединяйтесь.</p>
+               <a href=""><i class="fa-brands fa-discord"></i></a> 
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
+           
         </div>
     </footer>
 
