add footer links

--- a/app/index.html
+++ b/app/index.html
@@ -215,12 +215,12 @@
             </div>
 
             <div class="youtube">
-                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://t.me/pixelquest_games"><i class="fa-brands fa-telegram"></i></a>
                 <h3>Наш телеграм канал</h3>
              </div>
 
              <div class="youtube">
-                <a href=""><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:pixelquest001@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                 <h3>Наша почта</h3>
              </div>
         </div>
@@ -229,10 +229,20 @@
             <div class="footer_first-block">
                 <h2>PixelQuest</h2>
                 <p>Лучший игрвовой портал в своем роде. <br>Здесь можно найти все что вам нужно, присоединяйтесь.</p>
-               <a href=""><i class="fa-brands fa-discord"></i></a> 
+               <a href="https://discord.gg/S7JxuKaj"><i class="fa-brands fa-discord"></i></a> 
                 <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://t.me/pixelquest_games"><i class="fa-brands fa-telegram"></i></a>
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
+
+            <div class="footer_link">
+                <h2>Про нас:</h2>
+                <ul>
+                    <li><a href="">О проекте</a></li>
+                    <li><a href="">Сотрудничество</a></li>
+                    <li><a href="">Правила</a></li>
+                    <li><a href="">Донат</a></li>
+                </ul>
             </div>
            
         </div>
