--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
            <h2 class="logo">PixelQuest</h2>
              <div class="header__nav">
                  <a href="">Новости</a>
-                 <a href="">Обзоры</a>
+                 <a href="reviews.html">Обзоры</a>
                  <a href="">Гайды</a>
                  <a href="forum.html">Форум</a>
              </div>
@@ -245,6 +245,12 @@
                 </ul>
             </div>
            
+            <div class="footer_copy">
+                <h2>&copy;2024 PixelQuest</h2>
+                <p>Использование любых материалов сайта без согласования с администрацией запрещено</p>
+                <h3>18+</h3>
+                
+            </div>
         </div>
     </footer>
 
