--- a/app/index.html
+++ b/app/index.html
@@ -210,7 +210,7 @@
     <footer class="footer">
         <div class="contact_block">
             <div class="youtube">
-               <a href=""><i class="fa-brands fa-youtube"></i></a>
+               <a href="https://www.youtube.com/channel/UCVFB5snGIsq40vqMulk7mTA"><i class="fa-brands fa-youtube"></i></a>
                <h3>Наш Youtube канал</h3>
             </div>
 
@@ -230,9 +230,9 @@
                 <h2>PixelQuest</h2>
                 <p>Лучший игрвовой портал в своем роде. <br>Здесь можно найти все что вам нужно, присоединяйтесь.</p>
                <a href="https://discord.gg/S7JxuKaj"><i class="fa-brands fa-discord"></i></a> 
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCVFB5snGIsq40vqMulk7mTA"><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://t.me/pixelquest_games"><i class="fa-brands fa-telegram"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/pixelquest_0?igsh=eW11Z25zZjZnc2Ix"><i class="fa-brands fa-instagram"></i></a>
             </div>
 
             <div class="footer_link">
