--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="img/main_icon.ico">
     <title>PixelQuest</title>
 </head>
 <body>
@@ -238,7 +239,7 @@
             <div class="footer_link">
                 <h2>Про нас:</h2>
                 <ul>
-                    <li><a href="">О проекте</a></li>
+                    <li><a href="about_us.html">О проекте</a></li>
                     <li><a href="">Сотрудничество</a></li>
                     <li><a href="">Правила</a></li>
                     <li><a href="">Донат</a></li>
