--- a/app/about_us.html
+++ b/app/about_us.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Турниры</title>
-    <link rel="stylesheet" href="css/tournament.css">
-    <link rel="icon" href="img/tournament.ico">
+    <link rel="stylesheet" href="css/about_us.css">
+    <title>О нашем проекте</title>
 </head>
 <body>
     
