--- a/app/forum.html
+++ b/app/forum.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/forum.css">
+    <link rel="icon" href="img/forum.ico">
     <title>Форум</title>
 </head>
 <body>
@@ -11,6 +12,7 @@
         <div class="header__block">
            <h2 class="logo">PixelQuest</h2>
              <div class="header__nav">
+                <a href="index.html">Главная</a>
                  <a href="">Новости</a>
                  <a href="">Обзоры</a>
                  <a href="">Гайды</a>
