--- a/app/forum.html
+++ b/app/forum.html
@@ -14,7 +14,7 @@
              <div class="header__nav">
                 <a href="index.html">Главная</a>
                  <a href="">Новости</a>
-                 <a href="">Обзоры</a>
+                 <a href="reviews.html">Обзоры</a>
                  <a href="">Гайды</a>
                  <a href="forum.html">Форум</a>
              </div>
@@ -48,8 +48,42 @@
             </div>
      </header>
 
+                <!--Блок форума-->
+        <main class="main">
+            <div class="topic_block">
+                <h2>Обсуждения по теме:</h2>
+                <div class="subject_block">
+                    <h3>Консоли:</h3>
+                    <ul class="subject_list">
+                        <li><a href="">PLaystation</a></li>
+                        <li><a href="">Xbox</a></li>
+                        <li><a href="">Nintendo</a></li>
+                    </ul>
+                    <h3>ПК:</h3>
+                    <ul class="subject_list">
+                        <li><a href="">Мониторы</a></li>
+                        <li><a href="">Видеокарты</a></li>
+                        <li><a href="">Процессоры</a></li>
+                        <li><a href="">Оперативная память</a></li>
+                        <li><a href="">Клавиатура и мышь</a></li>
+                    </ul>
+                    <h3>Обо всем:</h3>
+                    <ul class="subject_list">
+                        <li><a href="">Ваша любимая игра?</a></li>
+                        <li><a href="">Устранение проблем</a></li>
+                        <li><a href="">Ищу игру</a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="discussions_block">
+            </div>
+
+        </main>
+
 
      <script src="https://kit.fontawesome.com/9419b3227e.js" crossorigin="anonymous"></script>
      <script src="js/forum.js"></script>
 </body>
-</html>
+</html> 
