--- a/app/forum.html
+++ b/app/forum.html
@@ -43,7 +43,7 @@
                  <label for="password">Введите пароль</label>
                  <input name="password" id="password" type="password">
                  <button type="submit" class="enter_button">Вход</button>
-                 <a href="">Создать новый аккаунт</a>
+                 <a href="new_account.html">Создать новый аккаунт</a>
              </form>
             </div>
      </header>
@@ -58,6 +58,7 @@
                         <li><a href="">PLaystation</a></li>
                         <li><a href="">Xbox</a></li>
                         <li><a href="">Nintendo</a></li>
+                        <li><a href="">Чиповка</a></li>
                     </ul>
                     <h3>ПК:</h3>
                     <ul class="subject_list">
