--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
                  <label for="password">Введите пароль</label>
                  <input name="password" id="password" type="password">
                  <button type="submit" class="enter_button">Вход</button>
-                 <a href="">Создать новый аккаунт</a>
+                 <a href="new_account.html">Создать новый аккаунт</a>
              </form>
             </div>
  
