--- a/app/reviews.html
+++ b/app/reviews.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reviews.css">
     <title>Обзоры</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__block">
+           <h2 class="logo">PixelQuest</h2>
+             <div class="header__nav">
+                <a href="index.html">Главная</a>
+                 <a href="">Новости</a>
+                 <a href="reviews.html">Обзоры</a>
+                 <a href="">Гайды</a>
+                 <a href="forum.html">Форум</a>
+             </div>
+             <div class="header__icon">
+                 <i class="fa-solid fa-magnifying-glass search_icon"></i>
+                 <i class="fa-regular fa-user user"></i>
+             </div>
+        </div>
+     
+         <!--Блок поиска--> 
+ 
+         <div class="search search_form">
+             <h3>Поиск</h3>
+             <input type="search" name="" id="">
+             <button class="search_button">Искать</button>
+         </div>
+ 
+ 
+ 
+            <!--Блок с логином-->
+            <div class="registration-form login">
+             <h2>Вход</h2>
+             <form action="">
+                 <label for="email_user">Введите Email</label>
+                 <input name="email_user" id="email_user" type="email">
+                 <label for="password">Введите пароль</label>
+                 <input name="password" id="password" type="password">
+                 <button type="submit" class="enter_button">Вход</button>
+                 <a href="new_account.html">Создать новый аккаунт</a>
+             </form>
+            </div>
+     </header>
+
+     <main class="main">
+        <div class="about_reviews">
+            <img src="img/xbox_original.jpg" alt="xbox_original">
+            <h2>История Xbox Original</h2>
+        </div>
+
+        <div class="about_reviews">
+            <img src="img/psone.png" alt="ps_one">
+            <h2>История PS One</h2>
+        </div>
+     </main>
 </body>
 </html> 
