adapted tournament block

--- a/app/tournament.html
+++ b/app/tournament.html
@@ -46,19 +46,16 @@
                  <a href="">Создать новый аккаунт</a>
              </form>
             </div>
-     </header>
-     <main class="main">
-        <div class="res_in_tour">
-            <h1>Как зарегистрироваться на турнир?</h1>
-            <p>1. На данный момент турниры проводятся только на PLaystation </p>
-            <p>2. Все результаты и видео-отчеты будут публиковать на сайте и на нашем Youtube канале.</p>
-            <p>3. Внимательно прочитайте описание к интересующему вас турниру</p>
-            <p>4. Для регистрации нужно заполнить форму, где нужно выбрать интересующую вас игру, выбрать время и дату проведения турнира. Заполнить обязательные поля и нажать кнопку регистрации</p>
-            <p>5. В каждом туринре есть призовые места. Какие именно призы разыгрываются написано в описании к каждому турниру. Турниры есть бесплатные или с незначительным взносом. Все это так же указанно в описании к туринру.</p>
-            <p>6. Для командных турниров вам нужно иметь команду или же зарегистрироваться в команду, в которую идет набор. Про набор в команду можно узнать в телеграме или в инстаграме.</p>
-        </div>
-     </main>
-
+            <div class="res_in_tour">
+                <h1>Регистрация на турнир?</h1>
+                <p>1. На данный момент турниры проводятся только на PLaystation </p>
+                <p>2. Все результаты и видео-отчеты будут публиковать на сайте и на нашем Youtube канале.</p>
+                <p>3. Внимательно прочитайте описание к интересующему вас турниру</p>
+                <p>4. Для регистрации нужно заполнить форму, где нужно выбрать интересующую вас игру, выбрать время и дату проведения турнира. Заполнить обязательные поля и нажать кнопку регистрации</p>
+                <p>5. В каждом туринре есть призовые места. Какие именно призы разыгрываются написано в описании к каждому турниру. Турниры есть бесплатные или с незначительным взносом. Все это так же указанно в описании к туринру.</p>
+                <p>6. Для командных турниров вам нужно иметь команду или же зарегистрироваться в команду, в которую идет набор. Про набор в команду можно узнать в телеграме или в инстаграме.</p>
+            </div>
+    </header>
      <script src="https://kit.fontawesome.com/9419b3227e.js" crossorigin="anonymous"></script>
 </body>
 </html>
